[package]
name = "testall"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
eosio-chain = { version = "0.2", path = "../crates/eosio-chain", default-features = false }
hello = { path = "./hello", default-features = false }
testasset = { path = "./testasset", default-features = false }
testoptional = { path = "./testoptional", default-features = false }
testvariant = { path = "./testvariant", default-features = false }
testabi = { path = "./testabi", default-features = false }
testrecoverkey = { path = "./testrecoverkey", default-features = false }

[lib]
name = "testall"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["std"]
std = [
    "eosio-chain/std",
    "hello/std",
    "testasset/std",
    "testoptional/std",
    "testvariant/std",
    "testabi/std",
    "testrecoverkey/std"
]

exclude = []
