[package]
name = "testall"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
rust-chain = { version = "0.2", path = "../crates/chain", default-features = false }
sha2 = "0.9.8"

[lib]
name = "testall"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["std"]
std = [
    "rust-chain/std",
]

exclude = []
