[package]
name = "eosio-codegen"
version = "0.1.0"
authors = ["learnforpractice@gmail.com"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uuosio/rscdk"
documentation = "https://docs.rs/eosio-codegen/"
homepage = "https://github.com/uuosio/"
description = "data structures and algorithms for intermediate representation"
keywords = ["wasm", "eosio", "webassembly", "blockchain"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[lib]
name = "eosio_codegen"

[dependencies]
quote = "1"
syn = { version = "1.0", features = ["parsing", "full", "visit", "extra-traits"] }
proc-macro2 = "1.0"
itertools = { version = "0.10", default-features = false }
either = { version = "1.5", default-features = false }

[features]
default = ["std"]
std = [
    "itertools/use_std",
    "either/use_std",
]
