[package]
name = "eosio_chain"
version = "0.1.0"
authors = ["learnforpractice@gmail.com"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uuosio/rscdk"
documentation = "https://docs.rs/eosio_chain/"
homepage = "https://github.com/uuosio/"
description = "eosio chain module that implementing intrinsics eosio APIs"
keywords = ["wasm", "eosio", "webassembly", "blockchain"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
eosio_macro = { version = "0.1.0", path = "../macro", default-features = false }
eosio-scale-info = { git="https://github.com/learnforpractice/eosio-scale-info", branch = "master", default-features = false, features = ["derive"], optional = true }
cfg-if = "1.0"

[features]
default = ["std"]
std = [
    "eosio-scale-info",
    "eosio-scale-info/std",
]

