[package]
name = "eosio-macro"
version = "0.1.2"
authors = [""]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uuosio/rscdk"
documentation = "https://docs.rs/eosio-macro/"
homepage = "https://github.com/uuosio/rscdk"
description = "eosio macro for generating code for contracts"
keywords = ["wasm", "webassembly", "blockchain", "eosio"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
quote = "1"
eosio-codegen = { version = "0.1.2", path = "../codegen", default-features = false }

syn = "1"
proc-macro2 = "1"


[lib]
name = "eosio_macro"
proc-macro = true

[features]
default = ["std"]
std = [
    "eosio-codegen/std",
]
