[package]
name = "helloworld"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
rust-chain = { version="0.2", path="../../crates/chain", default-features = false }

[lib]
name = "helloworld"
path = "lib.rs"
crate-type = [
    "cdylib", 
    #Used by abigen, DO NOT remove it
    "rlib"
]

[features]
default = ["std"]
std = [
    "rust-chain/std",
]
