[package]
name = "secondaryindex"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
eosio-chain = { version="0.2", path = "../../crates/eosio-chain", default-features = false }

[lib]
name = "secondaryindex"
path = "lib.rs"
crate-type = [
    "cdylib", 
    #Used by abigen, DO NOT remove it
    "rlib"
]

[features]
default = ["std"]
std = [
    "eosio-chain/std",
]
