[package]
name = "token"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
eosio_chain = { version = "0.1.0", path = "../../crates/eosio-chain", default-features = false }

[lib]
name = "token"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
lto = true

[features]
default = ["std"]
std = [
    "eosio_chain/std",
]
