[package]
name = "hello"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
eosio-chain = { version = "0.1.0", path = "../../crates/eosio-chain", default-features = false }

[lib]
name = "hello"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "eosio-chain/std",
]

# [workspace]
# members = ["abigen"]
