[package]
name = "testasset"
version = "0.0.1"
authors = [""]
edition = "2021"

[dependencies]
rust-chain = { version = "0.2", path = "../../crates/chain", default-features = false }

[lib]
name = "testasset"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "rust-chain/std",
]
