[package]
name = "testinlineaction"
version = "0.0.1"
authors = [""]
edition = "2021"

[dependencies]
eosio-chain = { version = "0.1.0", path = "../../crates/eosio-chain", default-features = false }

[lib]
name = "testinlineaction"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "eosio-chain/std",
]
ink-as-dependency = []

