[package]
name = "testintrinsics"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
rust-chain = { version = "0.2", path = "../../crates/rust-chain", default-features = false }

[lib]
name = "testintrinsics"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "rust-chain/std",
]
