[package]
name = "testmi2"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
eosio-chain = { version = "0.1.0", path = "../../crates/eosio-chain", default-features = false }

[lib]
name = "testmi2"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "eosio-chain/std",
]
