[package]
name = "receiver"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
rust-chain = { path = "../../../crates/chain", default-features = false }

[lib]
name = "receiver"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "rust-chain/std",
]

