[package]
name = "sender"
version = "3.0.0-rc8"
authors = [""]
edition = "2021"

[dependencies]
rust-chain = { path = "../../../crates/chain", default-features = false }

[lib]
name = "sender"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "rust-chain/std",
]

