[package]
authors = [""]
edition = "2021"
name = "abi-gen"
publish = false
rust-version = "1.56.1"
version = "0.1.0"

[[bin]]
name = "abi-gen"
path = "main.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
eosio_chain = { version = "0.1.0", path = "../../../crates/eosio-chain", default-features = false }

[dependencies.contract]
package = "hello"
path = ".."

[features]
default = ["std"]
std = [
    "eosio_chain/std"
]
