[package]
name = "saygoodbye"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
eosio-chain = { version = "0.2", path = "../../../crates/eosio-chain", default-features = false }

[lib]
name = "saygoodbye"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "eosio-chain/std",
]
