[package]
name = "tester"
version = "0.1.0"
authors = [""]
edition = "2021"

[dependencies]
rust-chain = { version = "0.2", path = "../../../crates/rust-chain", default-features = false }
sayhello = { version = "0.1.0", path = "../sayhello", default-features = false }
saygoodbye = { version = "0.1.0", path = "../saygoodbye", default-features = false }

[lib]
name = "tester"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "rust-chain/std",
    "sayhello/std",
    "saygoodbye/std",

]
